<resources>
    <string name="app_name">Examen Parcial CM</string>
    <string name="string_tv_usuario">USUARIO</string>
    <string name="string_usuario">Ingrese Usuario</string>
    <string name="string_tv_password">CONTRASEÑA</string>
    <string name="string_password">Ingresa Contraseña</string>
    <string name="button_ingresar">INGRESAR</string>
    <string name="string_tv_registrar"> <u>REGISTRAR</u> </string>

    //registro
    <string name="txt_r"> REGISTRO </string>
    <string name="rb1"> rojo </string>
    <string name="rb2">azul</string>
    <string name="rb3"> morado </string>
    <string name="cb1"> peru </string>
    <string name="cb2"> brasil </string>
    <string name="cb3"> colombia </string>
    <string name="btn_r"> REGISTRAR </string>
    <string name="btn_v"> VOLVER </string>
    <string name="tv_lista"> lista  </string>

    //michi
    <string name="tv_name"> PARTICIPANTE:   </string>
    <string name="b1">    </string>
    <string name="b2">    </string>
    <string name="b3">   </string>
    <string name="b4">    </string>
    <string name="b5">   </string>
    <string name="b6">   </string>
    <string name="b7">   </string>
    <string name="b8">   </string>
    <string name="b9">   </string>

</resources>