<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/txt_r"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/string_tv_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/R_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/string_usuario"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/string_tv_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/R_usuario" />

    <EditText
        android:id="@+id/R_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_password"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="112dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/R_contrasena">

        <RadioButton
            android:id="@+id/rb_rojo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb1" />

        <RadioButton
            android:id="@+id/rb_azul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb2" />

        <RadioButton
            android:id="@+id/rb_morado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb3" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/cb_colombia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/cb3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_brasil" />

    <CheckBox
        android:id="@+id/cb_brasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb2"
        app:layout_constraintTop_toBottomOf="@+id/cb_peru"
        tools:layout_editor_absoluteX="49dp"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/cb_peru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb1"
        app:layout_constraintTop_toBottomOf="@+id/R_contrasena"
        tools:layout_editor_absoluteX="47dp"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/lis_lista"
        android:layout_width="223dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_colombia"
        tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_registar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:text="@string/btn_r"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_volver"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lis_lista"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="92dp"
        android:text="@string/btn_v"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lis_lista"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>